# tilegame

./: .gitignore  CMakeLists.txt  LICENSE  README.md  attributions.txt
Engine/: CMakeLists.txt
Engine/include/: color.hpp  engine.h  engine.hpp  game.h  game.hpp  log.h  shader.h  stb_image.h  texture2D.h  texture2D.hpp  window.h  window.hpp
Engine/include/core/: camera.hpp  color.hpp  game.hpp  graphicsdevice.hpp  log.hpp  rectangle.hpp  resource.hpp  resourcemanager.hpp  shader.hpp  spritebatch.hpp  spriteinfo.hpp  spritesheet.hpp  texture2D.hpp  viewport.hpp  window.hpp
Engine/include/entities/: character.hpp  entity.hpp  freeentity.hpp  player.hpp
Engine/include/map/: map.hpp  maplayer.hpp  maprenderer.hpp  objectlayer.hpp  renderer.hpp  tile.hpp  tilelayer.hpp  tileset.hpp  tilesetinfo.hpp
Engine/include/scene/: entity.hpp  movecomponent.hpp  observer.hpp  positioncomponent.hpp  scene.hpp
Engine/include/scripting/: scriptable.hpp
Engine/include/sprites/: sprite.hpp  spritesheet.hpp
Engine/include/world/: character.hpp  map.hpp  maplayer.hpp  mapobjects.hpp  objectlayer.hpp  renderer.hpp  tilelayer.hpp  tilelayercomponent.hpp  tileset.hpp  tilesetcomponent.hpp  tilesetinfo.hpp  worldrendersystem.hpp
Engine/src/: CMakeLists.txt  color.cpp  game.cpp  graphicsdevice.cpp  log.cpp  shader.cpp  spriteBatchShader.frag  spritebatch.cpp  texture2D.cpp  viewport.cpp  window.cpp
Engine/src/core/: camera.cpp  color.cpp  game.cpp  graphicsdevice.cpp  log.cpp  resource.cpp  resourcemanager.cpp  shader.cpp  spritebatch.cpp  spriteinfo.cpp  spritesheet.cpp  texture2D.cpp  viewport.cpp  window.cpp
Engine/src/entities/: character.cpp  entity.cpp  freeentity.cpp  player.cpp
Engine/src/map/: map.cpp  maprenderer.cpp  objectlayer.cpp  renderer.cpp  tilelayer.cpp  tileset.cpp  tilesetinfo.cpp
Engine/src/scene/: entity.cpp  observer.cpp  scene.cpp
Engine/src/scripting/: scripable.cpp  scriptengine.cpp
Engine/src/sprites/: sprite.cpp  spritesheet.cpp
Engine/src/world/: character.cpp  map.cpp  objectlayer.cpp  renderer.cpp  tilelayer.cpp  tilelayercomponent.cpp  tileset.cpp  tilesetinfo.cpp  worldrendersystem.cpp
Tilegame/: CMakeLists.txt
Tilegame/content/: test_project.tiled-project  test_project.tiled-session
Tilegame/content/characters/: all.json  player.json
Tilegame/content/sprites/: sprite_sheet.tsx
Tilegame/content/world/: map1.json  map1.tmx  objecttypes.xml  test_world.tiled-session  tileset1.json  tileset1.tsx  tileset1_attribution.txt  world.json
Tilegame/include/: tilegame.h  tilegame.hpp  worldscene.hpp
Tilegame/include/worldscene/: animationsystem.hpp  camerasystem.hpp  contentsystem.hpp  inputsystem.hpp  movementsystem.hpp  rendersystem.hpp  worldscene.hpp
Tilegame/src/: CMakeLists.txt  main.cpp  tilegame.cpp  worldscene.cpp
Tilegame/src/worldscene/: animationsystem.cpp  camerasystem.cpp  contentsystem.cpp  inputsystem.cpp  movementsystem.cpp  rendersystem.cpp  spritesystem.cpp  worldscene.cpp
engine/: CMakeLists.txt
engine/include/: engine.hpp
engine/include/core/: circle.hpp  color.hpp  game.hpp  gametime.hpp  glerror.hpp  graphicsdevice.hpp  log.hpp  point.hpp  ray.hpp  rectangle.hpp  resource.hpp  resourcemanager.hpp  scene.hpp  scenegraphnode.hpp  shader.hpp  shape.hpp  spritebatch.hpp  spriteinfo.hpp  spritesheet.hpp  texture2D.hpp  texture2d.hpp  texture2dcontainer.hpp  viewport.hpp  window.hpp
engine/include/graphics/: graphicsdevice.hpp  postprocessingeffect.hpp  postprocessor.hpp  sprite.hpp  spritebatch.hpp  spritedata.hpp  spriteframe.hpp  spritesheet.hpp  spritestate.hpp  vertexpositiontexturecolor.hpp
engine/include/sprite/: sprite.hpp  spriteframe.hpp  spritesheet.hpp  spritestate.hpp
engine/include/tilemap/: tile.hpp  tilelayer.hpp  tilemap.hpp  tileobject.hpp  tileset.hpp
engine/include/world/: character.hpp  map.hpp  tile.hpp  tileset.hpp
engine/src/core/: color.cpp  game.cpp  glerror.cpp  graphicsdevice.cpp  log.cpp  point.cpp  rectangle.cpp  resource.cpp  resourcemanager.cpp  scene.cpp  shader.cpp  shape.cpp  spritebatch.cpp  spriteinfo.cpp  spritesheet.cpp  texture2D.cpp  texture2d.cpp  window.cpp
engine/src/graphics/: graphicsdevice.cpp  postprocessingeffect.cpp  postprocessor.cpp  sprite.cpp  spritebatch.cpp  spritesheet.cpp
engine/src/sprite/: sprite.cpp  spritesheet.cpp
engine/src/tilemap/: tilelayer.cpp  tilemap.cpp  tileset.cpp
engine/src/world/: character.cpp  map.cpp  tileset.cpp
tilegame/: CMakeLists.txt
tilegame/content/: demo.tiled-project  test_project.tiled-session
tilegame/content/characters/: characters.tsj  characters.tsx
tilegame/content/maps/: map1.tmj  map1.tmx  map2.tmj  map2.tmx
tilegame/content/scripts/: man1.lua  soldier1.lua
tilegame/content/shaders/: additive_blend.frag  daytime.frag  daytime.vert  spritebatch_luminosity.frag  spritebatch_luminosity.vert
tilegame/content/tilesets/: tileset1.tsj  tileset1.tsx
tilegame/content/worlds/: world1.world
tilegame/include/: tilegame.hpp
tilegame/include/worldscene/: camerasystem.hpp  contentsystem.hpp
tilegame/old/worldscene/: animationsystem.cpp  animationsystem.hpp  camerasystem.hpp  contentsystem.cpp  contentsystem.hpp  inputsystem.cpp  inputsystem.hpp  movementsystem.cpp  movementsystem.hpp  rendersystem.cpp  rendersystem.hpp  spritesystem.hpp
tilegame/src/: helper.hpp  main.cpp  math.hpp  math_helper.hpp  scenegraphdata.hpp  secureluastate.cpp  secureluastate.hpp  tilegame.cpp  tilegame.hpp
tilegame/src/components/: animation.hpp  camera.hpp  children.hpp  collider.hpp  direction.cpp  direction.hpp  event.hpp  inactive.cpp  inactive.hpp  localTransform.hpp  localtransform.hpp  luatable.cpp  luatable.hpp  movement.hpp  movetotarget.hpp  ordering.hpp  parent.hpp  particle.hpp  particleemitter.hpp  particlepool.hpp  pin.cpp  pin.hpp  player.hpp  renderable2D.hpp  renderable2d.hpp  renderlayer.hpp  scenenode.hpp  script.hpp  scriptloader.cpp  scriptloader.hpp  shape.hpp  speed.cpp  speed.hpp  sprite.hpp  target.cpp  target.hpp  tilelayer.hpp  tilemap.hpp  tileset.hpp  timer.cpp  (+7 more)
(+82 files in other folders)
